fix input date icon and placeholder on mobile

--- a/assets/css/components/input.css
+++ b/assets/css/components/input.css
@@ -14,6 +14,9 @@ input{
     width: max-content;
     box-sizing: border-box;
 }
+input[type="text"], input[type="email"]{
+    width: 100%;
+}
 input[type="date"]::-webkit-inner-spin-button{
     display: none;
     opacity: 0;
@@ -106,6 +109,7 @@ input[type="date"]:disabled::after{
 input[type="file"]{
     cursor: pointer;
     padding: 0;
+    padding-right: .5rem;
 }
 input[type="file"]:hover:not(.input--error){
     background: var(--outline);
