--- a/assets/css/sign-in-up/sign-in-up.css
+++ b/assets/css/sign-in-up/sign-in-up.css
@@ -104,6 +104,7 @@
     .sign--in-up__card{
         width: 100%;
         height: 100%;
+        gap: 1rem;
         flex-direction: column;
         justify-content: center;
     }
